<resources>
    <string name="app_name">CGF WASH MIS</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="download">Download</string>
    <string name="download_all">Download All</string>
    <string name="initilalizing_application">Initilalizing Application</string>
    <string name="telugu">తెలుగు</string>
    <string name="english" translatable="false">English</string>
    <string name="loading_data">Loading data</string>
    <string name="downloading_images">Downloading Images</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_email_id">Enter your Email Id</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_email">Invalid email</string>
    <string name="min_pass_length_req">Minimum 6 characters required</string>
    <string name="please_wait">Please Wait</string>
    <string name="unable_to_sign_in">Unable to Sign In</string>
    <string name="close">Close</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_confirm_prompt">Do you want to upload this picture?</string>
    <string name="upload">Upload</string>
    <string name="uploading_image">Uploading Image</string>
    <string name="image_uploaded">Image Uploaded</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="downloading_image">Downloading Image</string>
    <string name="picture_saved">Picture Saved</string>
    <string name="cannot_create_file">Cannot Create File</string>
    <string name="error_downloading_data">Error downloading data, Please check your internet connection</string>
    <string name="no_of_schools">No of Schools:</string>
    <string name="district">District:</string>
    <string name="mandal">Mandal:</string>
    <string name="check_in">CHECK IN</string>
    <string name="activities">ACTIVITIES</string>
    <string name="list_of_schools">list of schools</string>
    <string name="uid">UID</string>
    <string name="reporting_manager">Reporting Manager</string>
    <string name="no_data_found">No Data Found</string>
    <string name="photos">Photos</string>
    <string name="calender">Calendar</string>
    <string name="heps_data">HEPS Data</string>
    <string name="svp_data">SVP Data</string>
    <string name="gis">GIS</string>
    <string name="advocacy">Advocacy</string>
    <string name="reports">Reports</string>
    <string name="resources">Resources</string>
    <string name="others">Others</string>
    <string name="downloaded">Downloaded</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="no_pictures_to_download">No Pictures to download</string>
    <string name="delete_prompt_title">Delete All Pictures</string>
    <string name="delete_prompt_message">Deleted Pictures cannot be recoved. Are you sure you want to delete all pictures for current cluster coordinator?</string>
    <string name="no_pictures_to_delete">No pictures to delete</string>
    <string name="deleting_picture">Deleting Pictures..</string>
    <string name="deleted">Deleted</string>
    <string name="delete_prompt_title_single">Delete Picture</string>
    <string name="delete_prompt_message_single">Deleted Picture cannot be recoved. Are you sure you want to delete this picture?</string>
    <string name="search">Search</string>
    <string name="form_back_title">Close Without Saving</string>
    <string name="form_back_message">Unsaved data cannot be recovered. Do you want to discard the form?</string>
    <string name="discard">Discard</string>
    <string name="school_details">School Details</string>
    <string name="no_of_teachers">Number of Teachers</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="total">Total</string>
    <string name="classwise_strength">Classwise Strength</string>
    <string name="are_there_toilets_in_the_school">Are there toilets in the school?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_there_separate_toilets_for_boys_and_girls">Are there separate toilets for boys and girls?</string>
    <string name="functioning">Functioning</string>
    <string name="boys">Boys</string>
    <string name="girls">Girls</string>
    <string name="are_there_any_urinal_blocks">Are there any urinal blocks?</string>
    <string name="borewell">Borewell</string>
    <string name="govt_supply">Govt Supply</string>
    <string name="is_it_active_and_regular">Is it active and regular?</string>
    <string name="no_of_taps">No of Taps</string>
    <string name="what_is_the_source_of_water">What is the source of water?</string>
    <string name="water_supply">Water Supply</string>
    <string name="save">Save</string>
    <string name="save_successful">Save Successful</string>
    <string name="ok">Ok</string>
    <string name="save_successful_msg">The form was saved successfully to your phone database. It will be synced automatically to server.</string>
    <string name="class_">Class</string>
    <string name="form_a">Form A</string>
    <string name="toilets">Toilets</string>
    <string name="urinal_blocks">Urinal Blocks</string>
    <string name="urinals">Urinals</string>
    <string name="event_name">Event Name</string>
    <string name="new_event">New Event</string>
    <string name="event_detail">Event Detail</string>
    <string name="check_out">CHECK OUT</string>
    <string name="gis_info_not_found">GIS Information not found for this school</string>
    <string name="heps_data_will_be_sent_to_the_following_email_id">HEPS Data will be sent to the following email id.</string>
    <string name="send_data">Send Data</string>
    <string name="sending_mail">Sending Mail</string>
    <string name="dise_code">DISE code:</string>
    <string name="village">Village:</string>
    <string name="geo_address">Geo Address:</string>
    <string name="state">State:</string>

    <string-array name="states">
        <item>Select State:</item>
        <item>Telangana</item>
        <item>Andhra Pradesh</item>
        <item>Common</item>
    </string-array>
</resources>
