<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:elevation="20dp"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/urinal_blocks" />


            <TextView
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/are_there_any_urinal_blocks" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_urinals_yes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="showUrinalsLayout"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/radio_urinals_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="hideUrinalsLayout"
                    android:text="@string/no" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/urinals_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="10dp">


                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/are_there_separate_toilets_for_boys_and_girls" />

                <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_urinals_separate_yes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="showUrinalsSeparateLayout"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/radio_urinals_separate_no"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="showUrinalsCombinedLayout"
                        android:text="@string/no" />
                </RadioGroup>

                <LinearLayout
                    android:id="@+id/urinals_separate_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            style="@style/Base.TextAppearance.AppCompat.Medium"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/urinals"
                            android:textAlignment="center"
                            android:textStyle="bold" />

                        <TextView
                            style="@style/Base.TextAppearance.AppCompat.Medium"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/total"
                            android:textAlignment="center"
                            android:textStyle="bold" />

                        <TextView
                            style="@style/Base.TextAppearance.AppCompat.Medium"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/functioning"
                            android:textAlignment="center"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            style="@style/Base.TextAppearance.AppCompat.Medium"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/boys"
                            android:textAlignment="center"
                            android:textStyle="bold" />


                        <EditText
                            android:id="@+id/urinals_separate_boys"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/total"
                            android:inputType="number"
                            android:maxLength="10"
                            android:nextFocusDown="@+id/urinals_separate_boys_functioning"
                            android:textAlignment="center" />

                        <EditText
                            android:id="@id/urinals_separate_boys_functioning"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/functioning"
                            android:inputType="number"
                            android:maxLength="10"
                            android:nextFocusDown="@+id/urinals_separate_girls"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            style="@style/Base.TextAppearance.AppCompat.Medium"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/girls"
                            android:textAlignment="center"
                            android:textStyle="bold" />


                        <EditText
                            android:id="@id/urinals_separate_girls"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/total"
                            android:inputType="number"
                            android:maxLength="10"
                            android:nextFocusDown="@+id/urinals_separate_girls_functioning"
                            android:textAlignment="center" />

                        <EditText
                            android:id="@id/urinals_separate_girls_functioning"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/functioning"
                            android:inputType="number"
                            android:maxLength="10"
                            android:imeOptions="actionDone"
                            android:textAlignment="center" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/urinals_combined_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            style="@style/Base.TextAppearance.AppCompat.Medium"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/total"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/urinals_total"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/total"
                            android:inputType="number"
                            android:maxLength="10"
                            android:nextFocusDown="@+id/urinals_total_functioning"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            style="@style/Base.TextAppearance.AppCompat.Medium"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/functioning"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@id/urinals_total_functioning"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/functioning"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLength="10"
                            android:textAlignment="center" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>